--- a/lovelovelove.html
+++ b/lovelovelove.html
@@ -3,7 +3,7 @@
 	<head>
 	    <meta charset="UTF-8">		
 		<title>戀愛打地鼠lovelove</title>
-		<link rel="shortcut icon" href="images/a.ico">
+		<link rel="shortcut icon" href="img/a.ico">
 		<link rel="stylesheet" type="text/css" href="css/lovestyle.css">
 		<script src="js/lovejava.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
